--- a/index.html
+++ b/index.html
@@ -41,17 +41,18 @@
             <th>Игрок(и)</th>
         </tr>
         <tr><td>🛡 Булава</td><td>Sanguinem, Малаша</td></tr>
-        <tr><td>🌿 Посох</td><td>ingeborga</td></tr>
-        <tr><td>⚔ Двуручный меч</td><td>Йош</td></tr>
+        <tr><td>🌿 Посох</td><td>-</td></tr>
+        <tr><td>⚔ Двуручный меч</td><td>Иожык</td></tr>
         <tr><td>🔥 Орб</td><td>Lennart</td></tr>
         <tr><td>📖 Гримуар</td><td>Trеives</td></tr>
-        <tr><td>🎯 Лук</td><td>❓</td></tr>
-        <tr><td>🗡 Кинжал</td><td>❓</td></tr>
-        <tr><td>🏹 Меч</td><td>❓</td></tr>
-        <tr><td>🔑 Ключ</td><td>палыч</td></tr>
-        <tr><td>🛡 Копьё</td><td>Termixx</td></tr>
-        <tr><td>🔫 Пушка</td><td>linalinka</td></tr>
-        <tr><td>🌀 Пистолет</td><td>❓</td></tr>
+        <tr><td>🎯 Лук</td><td>-</td></tr>
+        <tr><td>🗡 Кинжал</td><td>Romanoff</td></tr>
+        <tr><td>🏹 Меч</td><td>Cильвер</td></tr>
+        <tr><td>🔑 Ключ</td><td>-</td></tr>
+        <tr><td>🛡 Копьё</td><td>Termixx, Крипмечник</td></tr>
+        <tr><td>🔫 Пушка</td><td>-</td></tr>
+        <tr><td>🌀 Пистолет</td><td>-</td></tr>
+        <tr><td>🛡 Щит + Агр</td><td>АДВОКАТ</td></tr>
     </table>
     <h3>🛡 Шмот</h3>
     <table>
@@ -60,6 +61,7 @@
             <th>Игрок</th>
         </tr>
         <tr><td>👨‍✈️ На пилота</td><td>мастер</td></tr>
+        <tr><td>🦾 Латы</td><td>Enori</td></tr>
     </table>
 </body>
 </html>
