--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <th>Тип</th>
             <th>Игрок</th>
         </tr>
-        <tr><td>👨‍✈️ На пилота</td><td>мастер</td></tr>
+        <tr><td>👨‍✈️ На пилота</td><td>MrMaster</td></tr>
         <tr><td>🦾 Латы</td><td>Enori</td></tr>
     </table>
 </body>
