--- a/index.html
+++ b/index.html
@@ -41,15 +41,15 @@
             <th>Игрок(и)</th>
         </tr>
         <tr><td>🛡 Булава</td><td>Sanguinem, Малаша</td></tr>
-        <tr><td>🌿 Посох</td><td>-</td></tr>
+        <tr><td>🌿 Посох</td><td>Breezy</td></tr>
         <tr><td>⚔ Двуручный меч</td><td>Иожык</td></tr>
         <tr><td>🔥 Орб</td><td>Lennart</td></tr>
-        <tr><td>📖 Гримуар</td><td>Trеives</td></tr>
+        <tr><td>📖 Гримуар</td><td>Trеives, Mel0n</td></tr>
         <tr><td>🎯 Лук</td><td>-</td></tr>
-        <tr><td>🗡 Кинжал</td><td>Romanoff</td></tr>
+        <tr><td>🗡 Кинжал</td><td>Romanoff, ВИСКАРЬ</td></tr>
         <tr><td>🏹 Меч</td><td>Cильвер</td></tr>
         <tr><td>🔑 Ключ</td><td>-</td></tr>
-        <tr><td>🛡 Копьё</td><td>Termixx, Крипмечник</td></tr>
+        <tr><td>🛡 Копьё</td><td>Крипмечник, Neervniy</td></tr>
         <tr><td>🔫 Пушка</td><td>-</td></tr>
         <tr><td>🌀 Пистолет</td><td>-</td></tr>
         <tr><td>🛡 Щит + Агр</td><td>АДВОКАТ</td></tr>
